--- a/changelog.txt
+++ b/changelog.txt
@@ -17,10 +17,12 @@ Change Log:
 - Fixed: Modules: Do not load modules on main site
 - Fixed: Paypal: Currency difference while a different currency is selected initially and changed later
 - Fixed: Paypal: Issue with new subscriptions
+- Fixed: Paypal: Payments being made in USD only, even if other currency is being set
 - Fixed: Receipt: Handle exception while generating Receipt PDF
 - Fixed: Stripe: Pending status message not shown if signup on checkout is disabled
 - Fixed: Stripe: dbDelta issue, subscription_id column not added to existing table
 - Fixed: Stripe: Fetch customer details for older subscriptions, without subscription id
+- Fixed: Stripe: Warning: check if stripe object has card details
 - Added: Option to disable Force redirect to checkout page if site is expired
 - Updated: Checkout: Call jQuery tabs only if there are multiple gateways
 
