--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,12 @@ Change Log:
 
 ----------------------------------------------------------------------
 
+3.5.1.4 - 08/28/2015 - Umesh Kumar
+
+-Fixed: Checkout: Multiple Signup link, if Multiple blog signup is allowed
+-Fixed: Stripe: Multiple Blog signup issue
+-Fixed: Stripe: Table issue for new installations
+
 3.5.1.3 - 08/28/2015 - Umesh Kumar
 -Fixed: Premium Theme/ Plugin menu missing for admin
 -Fixed: Deprecated warning for widget
