--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,8 @@ Change Log:
 3.5.1.4 - 09/09/2015 - Umesh Kumar
 
 -Fixed: Checkout: Multiple Signup link, if Multiple blog signup is allowed
+-Fixed: Paypal: Do not specify notification URL in direct payment as it breaks IPN forwarder,
+                Use Paypal IPN settings only
 -Fixed: Stripe: Multiple Blog signup issue
 -Fixed: Stripe: Table issue for new installations
 
