--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,13 @@ Change Log:
 
 ----------------------------------------------------------------------
 
+3.5.1.3 - [date]
+- Fixed: Features table not displaying correctly.
+- Updated: Added additional Stripe currencies.
+- Fixed: Errors on new blog creation.
+- Fixed: When switching gateways the old gateway will attempt to cancel when setting up the new gateway.
+- Updated: Information message will appear to users wanting to change their payment gateway.
+
 3.5.1.2 - 08/27/2015 - Umesh Kumar
 - Fixed: Payment amount comes to zero for existing expired sites
 - Fixed: Checkout: Monthly plan being selected if period selector is displayed at top
