--- a/changelog.txt
+++ b/changelog.txt
@@ -9,16 +9,17 @@ Change Log:
 
 3.5.1.4 - 10/15/2015 - Rheinard Korf & Umesh Kumar
 - Fixed: Checkout: Multiple Signup link, if Multiple blog signup is allowed
-- Fixed: Paypal: Do not specify notification URL in direct payment as it breaks IPN forwarder, Use Paypal IPN settings only
+- Fixed: Paypal: Do not specify notification URL in direct payment as it breaks IPN forwarder, Use PayPal IPN settings only
 - Fixed: Stripe: Multiple Blog signup issue
 - Fixed: Stripe: Table issue for new installations
-- Added: Option for disablinf PDF receipts
+- Added: Option for disabling PDF receipts
 - Fixed: Features table not displaying correctly.
 - Updated: Added additional Stripe currencies.
 - Fixed: Errors on new blog creation.
 - Fixed: When switching gateways the old gateway will attempt to cancel when setting up the new gateway.
 - Updated: Information message will appear to users wanting to change their payment gateway.
 - Fixed: Upgrading with PayPal while still within trial period.
+- Added: New Premium Plugins Manager to give you more control over the plugins that each level can use.
 
 3.5.1.3 - 08/28/2015 - Umesh Kumar
 - Fixed: Premium Theme/ Plugin menu missing for admin
