Stripe gateway fixes
- Fixed: Pre 3.5 feature to set default trial levels restored.
- Added: When extending a site manually and Stripe is activated, there is an option to attempt to reactivate the Stripe account.
         Please note to only use this upon accidental cancellation or when you have explicit permission from the user.
- Update: Warnings about manual payment cancellations removed.
- Update: New warnings when Stripe credit card transactions failed and prompt to re-enter credit card details on accounts page.

--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,10 @@ Change Log:
 
 3.5.1.7 - 12/07/2015 - Rheinard Korf
 - Fixed: Pre 3.5 feature to set default trial levels restored.
+- Added: When extending a site manually and Stripe is activated, there is an option to attempt to reactivate the Stripe account.
+         Please note to only use this upon accidental cancellation or when you have explicit permission from the user.
+- Update: Warnings about manual payment cancellations removed.
+- Update: New warnings when Stripe credit card transactions failed and prompt to re-enter credit card details on accounts page.
 
 3.5.1.6 - 11/23/2015 - Rheinard Korf
 - Priority Fix: Manual extension of site will re-activate cancelled Stipe subscription. User will only be charged at next expiry.
