Updated translation file

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,10 +6,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-3.5.2 -
+3.5.2 - Umesh Kumar
 
 -Fixed: Use stripslashes in Paypal IPN handler, as WordPress escapes the data, it was
-        leading to failed IPN verification
+        leading to failed IPN verification in some cases
 
 3.5.1.9 - 12/29/2015 - Rheinard
 - Fixed: Checkout page now displaying proper confirmation.
