--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@ Change Log:
 ----------------------------------------------------------------------
 
 3.5.2 - 02/20/2016 - Umesh Kumar
+*Fixes
+    * Check subscription expiration from respective gateway before withdrawing Pro Site status
+
+3.5.2 - 02/20/2016 - Umesh Kumar
 
 -Fixed: First payment coupons not working after single use
 -Fixed: Use stripslashes in Paypal IPN handler, as WordPress escapes the data, it was
