Do not disable free site, if Pay to blog is enabled

--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,7 @@ Change Log:
     * Allow trial for selected level only, Charge regular amount for other levels
     * Issue with setting trial for recurring subscription
     * JS error period_selector.val is not a function, if single period is enabled
+    * Pay To Blog: Do not disable free sites if Pay to Blog is enabled
     * Unable to update feature description under Feature Tables settings
     * Allow updating currency if only Manual Payment is enabled
     * Preserve Level prices for a period even if it's set to not visible in Levels settings
