Hide Paypal, Stripe and Paypal fixes

--- a/changelog.txt
+++ b/changelog.txt
@@ -12,7 +12,9 @@ Change Log:
     - Stripe: Set trial for the specified level only while manually extending site
     - Paypal: Paypal Pro wasn't creating pro sites
     - Paypal: Possible fix for sites not being assigned Pro Site status sometimes
+    - Paypal: Hide Paypal Gateway for latest version
     - Gateway Settings: Gateway list not being generated if a registered external gateway is not available
+    - Security: Sanitize POST/GET data
 
 3.5.4 - 05/08/2016 - Umesh Kumar
 
