Checkout url should be default to current page ssl https://app.asana.com/0/211855939023775/115962872092344

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fixed: Checkout url should be default to current page ssl
+
 3.5.5 - 06/19/2016 - Umesh Kumar
 
 *Fixed:
