--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Change Log:
 
 - Fix: Checkout url should be default to current page ssl
 - Fix: Make maximum coupon discount $0.01 to avoid breaking checkout
+- Fix: Confusing text in Setup Fee tooltip
 
 3.5.5 - 06/19/2016 - Umesh Kumar
 
