--- a/pro-sites-files/languages/psts-default.pot
+++ b/pro-sites-files/languages/psts-default.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pro Sites 3.5.5-beta1\n"
 "Report-Msgid-Bugs-To: http://premium.wpmudev.org/\n"
-"POT-Creation-Date: 2016-12-15 22:30:08+00:00\n"
+"POT-Creation-Date: 2016-12-15 22:32:19+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3705,7 +3705,7 @@ msgid "Setup Fee"
 msgstr ""
 
 #: pro-sites-files/lib/ProSites/View/Settings.php:287
-msgid "Only paid levels (not the default free level) will be charged a setup fee."
+msgid "Free sites are not charged a setup fee until upgraded to a paid level. If you want upgrades from any level to be charged a setup fee then check \"Apply setup fee to upgrades\"."
 msgstr ""
 
 #: pro-sites-files/lib/ProSites/View/Settings.php:298
