Fixed: Login users with no blog unable to signup

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,7 +15,7 @@ Change Log:
     - Allow to set checkout page as home page
     - Unable to change PayPal currency.
     - Create checkout page if rebranding text is updated
-    - Checkout page doesn't appears for a logged in user, if multiple blog signup is kept off
+    - Checkout page doesn't appears for a logged in user with no existing blog, if multiple blog signup is kept off
 
 3.5.5 - 06/19/2016 - Umesh Kumar
 
