--- a/changelog.txt
+++ b/changelog.txt
@@ -8,7 +8,9 @@ Change Log:
 3.5.9.1 - 04/06/2018
 
 *Added:
-    - Improved subscriber information for Stripe.
+    - Added GDPR personal data export.
+    - Added GDPR personal data eraser.
+    - Added GDPR message to privacy page.
 *Fixed:
     - Blog ID value was passed as a string instead of int.
     - DOM error on pricing table page.
