Show add new blog link if there is no sites left when a site is permanently pro

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.5.9.2 - 05/06/2018
+
+*Fixed:
+    - Unable to signup when GDPR Privacy Policy page is not set.
+    - Fatal error on PHP 5.2.
+
 3.5.9.1 - 04/06/2018
 
 *Added:
