--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.5.9.3 - 19/06/2018
+
+*Fixed:
+    - Stripe API error.
+    - Trial period continues to be doubled.
+
 3.5.9.2 - 05/06/2018
 
 *Fixed:
